added a page that has a map with a marker that can be dragged along a directions generated polyline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -110,7 +110,7 @@
         </div>
       </div>
     </nav>
-    <% if current_user && current_page?('/') %>
+    <% if current_user && current_page?('/') || current_page?('/location') %>
       <div id="map"></div>
       <div id="directions_panel" style="display: none;">
       
