--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,6 @@
     
     <link href="/css/style.css" rel="stylesheet">
     
-    
     <script type="javascript" src="/js/jquery-1.10.2.js"></script>
     <script type="javascript" src="/js/bootstrap.js"></script>
     <script type="javascript" src="/js/plugins.js"></script>
@@ -28,12 +27,13 @@
   </head>
 
   <body>
+    <div id="currentRoute" style="visibility: hidden"><%= current_user.current_route.id %></div>
 
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="/">eXMapp</a>
-          <% if current_user && current_page?('/') %>
+          <% if current_user && current_page?('/') || current_page?('/location') || current_page?('/location2') %>
             <div class="btn-group">
               <button id="start" class="btn btn-primary">Start</button>
             </div>
@@ -110,7 +110,7 @@
         </div>
       </div>
     </nav>
-    <% if current_user && current_page?('/') || current_page?('/location') %>
+    <% if current_user && current_page?('/') || current_page?('/location') || current_page?('/location2') %>
       <div id="map"></div>
       <div id="directions_panel" style="display: none;">
       
