--- a/app/views/routes/location.html.erb
+++ b/app/views/routes/location.html.erb
@@ -3,10 +3,8 @@
 <title>Location</title>
 </head>
 <body> 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=<%= ENV['API_HOST_INIT_MAP_KEY'] %>&libraries=geometry"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=<%= ENV['API_HOST_INIT_MAP_KEY'] %>&libraries=geometry&callback=initMap"></script>
 
-<style type="text/css"> 
-</style> 
 <script>
 
   var map;
@@ -17,11 +15,55 @@
   var directionsService = new google.maps.DirectionsService;
   directionsDisplay.setMap(map);
 
+  var current_route_id = document.getElementById("currentRoute").innerHTML;
+
+  document.getElementById('travel_mode').addEventListener('change', function () {
+    var style = this.value === "TRANSIT" ? 'inline' : 'none';
+    document.getElementById('transit_mode').style.display = style;
+  });
+
+  document.getElementById('start').addEventListener('click', function () {
+    document.getElementById('end').style.display = 'inline';
+    document.getElementById('reverse').style.display = 'inline';
+    document.getElementById('travel_mode').style.display = 'inline';
+    document.getElementById('directions_panel').style.display = 'inline'
+    this.style.display = 'none';
+  });
+
+  document.getElementById('reverse').addEventListener('click', function () {
+    this.style.display = 'none';
+
+  });
+
+  document.getElementById('end').addEventListener('click', function () {         
+    window.location.reload();
+      
+  }); 
+
+  document.getElementById('travel_mode').addEventListener('change', function() {
+    $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
+      var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
+      var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+      
+      calcRoute(startPoint, endPoint);
+    });
+    
+  });
+
+  document.getElementById('transit_mode').addEventListener('change', function() { 
+    $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
+      var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
+      var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+      
+      calcRoute(startPoint, endPoint);
+    });
+  });
+
   function initialize() {
       
     map = new google.maps.Map(document.getElementById("map"), {
-      center: new google.maps.LatLng(37.4419, -122.1419),
-      zoom: 13,
+      center: { lat: 39.8, lng: -98.7129 },
+      zoom: 5,
       maptypeId: 'roadmap',
       fullscreenControl: true,
       zoomControl: true,
@@ -34,9 +76,26 @@
                 "stylers": [ { "invert_lightness": true }, { "saturation": 10 }, { "lightness": 30 }, { "gamma": 0.5 }, { "hue": "#435158" } ] 
               }]
     });
-    calcRoute("2844 Sugar Pine Circle, Northbrook, IL 60062", "222 W Merchandise Mart Plaza, Chicago, IL 60654");
 
   };
+
+  $("#start").click(function(){
+    $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
+      var startPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+      var endPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
+      
+      calcRoute(startPoint, endPoint);
+    });
+  });
+
+  $("#reverse").click(function(){
+    $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
+      var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
+      var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+      
+      calcRoute(startPoint, endPoint);
+    });
+  });
 
   google.maps.event.addDomListener(window, "load", initialize);
 
@@ -46,11 +105,23 @@
     map.setCenter(center);
   });
 
+  function clearMap() {
+    polyline.setMap(null);
+    location.setMap(null);
+  };
+
   function calcRoute(start, end) {
+    
+    var selectedTravelMode = document.getElementById('travel_mode').value;
+    var selectedTransitMode = document.getElementById('transit_mode').value;
+
     var request = {
       origin: start,
       destination: end,
-      travelMode: 'DRIVING'
+      travelMode: selectedTravelMode,
+      transitOptions: {
+        modes: [selectedTransitMode]
+      }
     };
     directionsService.route(request, function (response, status) {
       if (status == google.maps.DirectionsStatus.OK) {
@@ -76,7 +147,6 @@
 
         var nextSegment = steps[j].path;
         for (k = 0; k < nextSegment.length; k++) {
-          // polyline.getPath().push(nextSegment[k]);
           bounds.extend(nextSegment[k]);
         };
       };
