--- a/app/views/routes/location.html.erb
+++ b/app/views/routes/location.html.erb
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <head> 
-<title>Location</title>
+<title>location</title>
 </head>
 <body> 
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=<%= ENV['API_HOST_INIT_MAP_KEY'] %>&libraries=geometry&callback=initMap"></script>
 
 <script>
 
+  var currentPositionMarker;
+
+  var count = 0;
   var map;
   var directionsDisplay = new google.maps.DirectionsRenderer({
     draggable: true,
@@ -86,6 +89,7 @@
       
       calcRoute(startPoint, endPoint);
     });
+    initLocationProcedure();
   });
 
   $("#reverse").click(function(){
@@ -95,6 +99,7 @@
       
       calcRoute(startPoint, endPoint);
     });
+    initLocationProcedure();
   });
 
   google.maps.event.addDomListener(window, "load", initialize);
@@ -104,11 +109,6 @@
     google.maps.event.trigger(map, "resize");
     map.setCenter(center);
   });
-
-  function clearMap() {
-    polyline.setMap(null);
-    location.setMap(null);
-  };
 
   function calcRoute(start, end) {
     
@@ -133,9 +133,10 @@
   }
 
   function renderRoute(response) {
+
     var bounds = new google.maps.LatLngBounds();
     var route = response.routes[0];
-    var summaryPanel = document.getElementById("directions_panel");
+    // var summaryPanel = document.getElementById("directions_panel");
     // var detailsPanel = document.getElementById("direction_details");
     var path = response.routes[0].overview_path;
     var legs = response.routes[0].legs;
@@ -152,24 +153,27 @@
       };
     };
 
-    // var origin = new google.maps.Marker({
-    //             position: legs[0].start_location,
-    //             draggable: false,
-    //             label: 'A',
-    //             map: map
-    //         });
+    var origin = new google.maps.Marker({
+      position: legs[0].start_location,
+      draggable: false,
+      label: 'A',
+      title: "Origin",
+      map: map
+    });
+
     var destination = new google.maps.Marker({
       position: legs[0].end_location,
       draggable: false,
       label: 'B',
+      title: "Destination",
       map: map
     });
          
-    var location = new google.maps.Marker({
-      position: legs[0].start_location,
-      draggable: true,
-      map: map
-    });
+    // var currentLocation = new google.maps.Marker({
+    //   position: legs[0].start_location,
+    //   draggable: true,
+    //   map: map
+    // });
 
     var decodedPath = google.maps.geometry.encoding.decodePath(encodedPath); 
 
@@ -186,7 +190,7 @@
 
     polyline.setMap(map);
     map.fitBounds(bounds);
-    var snapToRoute = new SnapToRoute(map, location, polyline);
+    var snapToRoute = new SnapToRoute(map, currentPositionMarker, polyline);
 
   };
 
@@ -246,6 +250,37 @@
       var Px = this.normalProj_.fromLatLngToPoint(path.getAt(i));
       this.routePixels_.push(Px);
     };
+  };
+
+  // current position of the user
+  function setCurrentPosition(pos) {
+    currentPositionMarker = new google.maps.Marker({
+      map: map,
+      position: { lat: pos.coords.latitude, lng: pos.coords.longitude },
+      title: "Current Position"
+    });
+    map.panTo(new google.maps.LatLng(
+      pos.coords.latitude,
+      pos.coords.longitude
+    ));
+  };
+
+  function displayAndWatch(position) {       
+    // set current position
+    setCurrentPosition(position);
+     
+    // watch position
+    watchCurrentPosition();
+  };
+
+  function watchCurrentPosition() {
+    var positionTimer = navigator.geolocation.watchPosition(function (position) {
+      setMarkerPosition(currentPositionMarker, position);
+    });
+  };
+   
+  function setMarkerPosition(marker, position) {
+    marker.setPosition(new google.maps.LatLng(position.coords.latitude, position.coords.longitude));
   };
 
   SnapToRoute.prototype.updateMarkerLocation_ = function (mouseLatLng) {
@@ -338,6 +373,21 @@
       'to': to,
       'from': from
     };
+  };
+
+  function locError(error) {
+    // tell the user if the current position could not be located
+    alert("The current position could not be found!");
+  };
+   
+
+  function initLocationProcedure() {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(displayAndWatch, locError);
+    } else {
+      // tell the user if a browser doesn't support this amazing API
+      alert("Your browser does not support the Geolocation API!");
+    }
   };
 
 </script> 
