--- a/app/views/markers/new.html.erb
+++ b/app/views/markers/new.html.erb
@@ -53,7 +53,8 @@
           console.log(marker.message);
           
         });
-       });
+      });
+      window.location = "/";
     };
 
     locateMarker();
@@ -97,6 +98,7 @@
           });
 
         });
+        window.location.replace("/");
       };
       findCurrentPosition();
     });
