--- a/app/views/routes/location.html.erb
+++ b/app/views/routes/location.html.erb
@@ -3,7 +3,7 @@
 <title>location</title>
 </head>
 <body> 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=<%= ENV['API_HOST_INIT_MAP_KEY'] %>&libraries=geometry&callback=initMap"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=<%= ENV['API_HOST_INIT_MAP_KEY'] %>&libraries=geometry&callback=initMap"></script>
 
 <script>
 
