--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,9 @@
   </head>
 
   <body>
+  <% if current_user %>
     <div id="currentRoute" style="visibility: hidden"><%= current_user.current_route.id %></div>
+  <% end %>
 
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
