--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -38,7 +38,7 @@
           zoom: 5,
           fullscreenControl: true,
           zoomControl: true,
-          mapTypeControl: true,
+          mapTypeControl: false,
           streetViewControl: false,
           scrollwheel: false,
           styles: [{ 
