--- a/app/views/routes/location.html.erb
+++ b/app/views/routes/location.html.erb
@@ -3,7 +3,8 @@
 <title>Location</title>
 </head>
 <body> 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=<%= ENV['API_HOST_INIT_MAP_KEY'] %>&libraries=geometry"></script>
+
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=<%= ENV['API_HOST_INIT_MAP_KEY'] %>&libraries=geometry"></script>
 
 <script>
   var decodedPath;
@@ -12,18 +13,23 @@
   var currentLocation;
   var polyline;
   var map;
+
   var directionsDisplay = new google.maps.DirectionsRenderer({
     draggable: true,
     map: map,
     panel: document.getElementById('directions_panel')
   });
+
   var directionsService = new google.maps.DirectionsService;
   directionsDisplay.setMap(map);
+
   var current_route_id = document.getElementById("currentRoute").innerHTML;
+  
   document.getElementById('travel_mode').addEventListener('change', function () {
     var style = this.value === "TRANSIT" ? 'inline' : 'none';
     document.getElementById('transit_mode').style.display = style;
   });
+
   document.getElementById('start').addEventListener('click', function () {
     document.getElementById('end').style.display = 'inline';
     document.getElementById('reverse').style.display = 'inline';
@@ -31,13 +37,16 @@
     document.getElementById('directions_panel').style.display = 'inline'
     this.style.display = 'none';
   });
+
   document.getElementById('reverse').addEventListener('click', function () {
     this.style.display = 'none';
   });
+
   document.getElementById('end').addEventListener('click', function () {         
     window.location.reload();
       
   }); 
+
   document.getElementById('travel_mode').addEventListener('change', function() {
     if (document.getElementById('reverse').style.display === 'inline') {
       $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
@@ -56,6 +65,7 @@
     };
     
   });
+
   document.getElementById('transit_mode').addEventListener('change', function() { 
     if (document.getElementById('reverse').style.display === 'inline') {
       $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
@@ -73,12 +83,14 @@
       });
     };
   });
+
   function clearMap () {
     origin.setMap(null);
     destination.setMap(null);
     currentLocation.setMap(null);
     polyline.setMap(null);
   };
+
   function initialize() {
       
     map = new google.maps.Map(document.getElementById("map"), {
@@ -97,6 +109,7 @@
               }]
     });
   };
+
   $("#start").click(function(){
     $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
       var startPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
@@ -105,6 +118,7 @@
       calcRoute(startPoint, endPoint);
     });
   });
+
   $("#reverse").click(function(){
     clearMap();
     $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
@@ -114,12 +128,15 @@
       calcRoute(startPoint, endPoint);
     });
   });
+
   google.maps.event.addDomListener(window, "load", initialize);
+
   google.maps.event.addDomListener(window, 'resize', function() {
     var center = map.getCenter();
     google.maps.event.trigger(map, "resize");
     map.setCenter(center);
   });
+
   function calcRoute(start, end) {
     
     var selectedTravelMode = document.getElementById('travel_mode').value;
@@ -138,12 +155,11 @@
         renderRoute(response);
       };
     });
-  }
+  };
+
   function renderRoute(response) {
     var bounds = new google.maps.LatLngBounds();
     var route = response.routes[0];
-    // var summaryPanel = document.getElementById("directions_panel");
-    // var detailsPanel = document.getElementById("direction_details");
     var path = response.routes[0].overview_path;
     var legs = response.routes[0].legs;
     var encodedPath = response.routes[0].overview_polyline;
@@ -174,7 +190,8 @@
       draggable: true,
       map: map
     });
-    decodedPath = google.maps.geometry.encoding.decodePath(encodedPath); 
+
+    decodedPath = google.maps.geometry.encoding.decodePath(encodedPath);
 
     polyline = new google.maps.Polyline({
       path: decodedPath,
@@ -183,10 +200,13 @@
       strokeWeight: 6,
       map: map
     });
+
     polyline.setMap(map);
+
     map.fitBounds(bounds);
     var snapToRoute = new SnapToRoute(map, currentLocation, polyline);
   };
+
   function decodeLevels(encodedLevelsString) {
     var decodedLevels = [];
     for (var i = 0; i < encodedLevelsString.length; ++i) {
@@ -195,6 +215,7 @@
     }
     return decodedLevels;
   };
+
   function SnapToRoute(map, marker, polyline) {
     this.routePixels_ = [];
     this.normalProj_ = map.getProjection();
@@ -257,6 +278,7 @@
     d += google.maps.geometry.spherical.computeDistanceBetween(routeOverlay.getAt(line - 1), routeOverlay.getAt(line)) * to;
     return d;
   };
+
   SnapToRoute.prototype.getClosestPointOnLines_ = function (pXy, aXys) {
     var minDist;
     var to;
@@ -310,41 +332,6 @@
     };
   };
 
-  function formatDecodedPaths(path) {
-    var paths = [];
-    var currentPath;
-    var pathFix;
-    var stringPath;
-    var numPath = parseInt(path.length/100);
-
-    if (path.length % 100 > 0) {
-      numPath += 1;
-    };
-
-    for (var i = 0; i < numPath; i++) {
-      var correctedPath = "";
-
-      if (path.length >= 100) {
-        currentPath = path.splice(0, 100);
-      } else {
-        currentPath = path.splice(0, path.length);
-      };
-
-      stringPath = currentPath.toString();
-      pathFix = stringPath.split(",");
-
-      for (var j = 0; j < pathFix.length; j+=2) {
-
-        correctedPath += pathFix[j].substr(1) + "," + pathFix[j+1].substr(1).slice(0,-1) + "|";
-
-      };
-      paths.push(correctedPath.slice(0,-1));
-
-    };
-
-    return paths;
-
-  };
 </script> 
 </body> 
 </html>
