tinkered with real time tracking

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -6,7 +6,19 @@
   height: 0px;
 }
 
-h1 {
+#title {
+  text-align: center;
+}
+
+#loginBtn {
+
+}
+
+#alert {
+  float: top;
+};
+
+.well {
   text-align: center;
 }
 
