--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,12 @@
   </head>
 
   <body>
+  <% flash.each do |name, message| %>
+    <div id="alert" class="alert alert-<%= name %> alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <strong><%= name.upcase %></strong> <%= message %>
+    </div>
+  <% end %>
   <% if current_user %>
     <div id="currentRoute" style="visibility: hidden"><%= current_user.current_route.id %></div>
   <% end %>
@@ -170,12 +176,7 @@
         </div>
       </div>
     </div>
-    <% flash.each do |name, message| %>
-      <div class="alert alert-<%= name %> alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong><%= name.upcase %></strong> <%= message %>
-      </div>
-    <% end %>
+    
 
   </body>
 </html>
