--- a/app/views/markers/index.html.erb
+++ b/app/views/markers/index.html.erb
@@ -1,5 +1,5 @@
 <div class="well">
-  <h1>Markers</h1>
+  <h1 id="title">Markers</h1>
 </div>
 <div class="well">
   <% @markers.each do |marker| %>
