--- a/app/views/markers/new.html.erb
+++ b/app/views/markers/new.html.erb
@@ -23,7 +23,7 @@
   </div>
   <br>
   <button id="submitBtn" class="btn btn-primary">Submit</button>
-  <button id="geolocate" class="btn btn-info">Locate Me</button>
+  <!-- <button id="geolocate" class="btn btn-info">Locate Me</button> -->
 </div>
 <div id="m"></div>
 
@@ -57,7 +57,6 @@
     };
 
     locateMarker();
-    window.location = "/";
   });
 
   $("#geolocate").click(function(){
@@ -98,7 +97,7 @@
           });
 
         });
-        window.location.replace("/");
+        
       };
       findCurrentPosition();
     });
