--- a/app/views/routes/location2.html.erb
+++ b/app/views/routes/location2.html.erb
@@ -7,17 +7,28 @@
 <body>
 <script>
 
+  window.lat; 
+  window.lng;
+  var lineCoords = [];
   var map;
   var currentLocation;
   var pnChannel = "eXMapp";
   var pubnub = new PubNub({
     publishKey: "<%= ENV['API_HOST_PUBNUB_PUBLISH_KEY'] %>",
-    subscribeKey: "<%= ENV['API_HOST_PUBNUB_SUBSCRIBE_KEY'] %>",
-    uuid: PubNub.generateUUID()
+    subscribeKey: "<%= ENV['API_HOST_PUBNUB_SUBSCRIBE_KEY'] %>"
   });
-  
-  pubnub.subscribe({channels: [pnChannel]});
-  pubnub.addListener({message:setLocation});
+         
+  pubnub.addListener({
+    message: function(message) {
+      redraw(message);
+    }
+  });
+
+  pubnub.subscribe({
+    channels: [pnChannel]
+  });
+
+  // pubnub.addListener({message: redraw});
 
   document.getElementById('travel_mode').addEventListener('change', function () {
     var style = this.value === "TRANSIT" ? 'inline' : 'none';
@@ -44,7 +55,7 @@
 
   function initMap() {
     var current_route_id = document.getElementById("currentRoute").innerHTML;
-    var map = new google.maps.Map(document.getElementById('map'), {
+    map = new google.maps.Map(document.getElementById('map'), {
       center: {lat: 39.8, lng: -98.7129},
       zoom: 5,
       fullscreenControl: true,
@@ -58,9 +69,7 @@
                   "stylers": [ { "invert_lightness": true }, { "saturation": 10 }, { "lightness": 30 }, { "gamma": 0.5 }, { "hue": "#435158" } ] 
               }]
     });
-    var marker = new google.maps.Marker({
-                     map: map
-                   });
+    
     var directionsService = new google.maps.DirectionsService;
     var directionsDisplay = new google.maps.DirectionsRenderer({
       map: map,
@@ -71,8 +80,8 @@
     document.getElementById('travel_mode').addEventListener('change', function() {
                 
       $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
-        var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
-        var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+        var startPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+        var endPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
         
         determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
       });
@@ -81,8 +90,8 @@
 
     document.getElementById('transit_mode').addEventListener('change', function() { 
       $.get("/api/v1/routes/"+current_route_id+".json", function(route) {
-        var startPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
-        var endPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+        var startPoint = { lat: parseFloat(route["origin"]["latitude"]), lng: parseFloat(route["origin"]["longitude"]) };
+        var endPoint = { lat: parseFloat(route["destination"]["latitude"]), lng: parseFloat(route["destination"]["longitude"]) };
         
         determineRoute(directionsService, directionsDisplay, startPoint, endPoint);
       });
@@ -167,24 +176,18 @@
     });
   };
 
-  var setLocation = function(payload) {
-    lat = payload.message.lat;
-    lng = payload.message.lng;
-    map.setCenter({lat:lat, lng:lng, alt:0});
-    currentLocation.setPosition({lat:lat, lng:lng, alt:0});
-    
-    pushCoordToArray(lat, lng);
-
+  var redraw = function(message) {
+    lat = parseFloat(message["message"]["lat"]);
+    lng = parseFloat(message["message"]["lng"]);
+    currentLocation.setPosition({lat:lat, lng:lng});
+    lineCoords.push(new google.maps.LatLng(lat, lng));
     var lineCoordinatesPath = new google.maps.Polyline({
-      path: lineCoordinatesArray,
+      path: lineCoords,
       geodesic: true,
-      strokeColor: '#2E10FF',
-      strokeOpacity: 1.0,
-      strokeWeight: 2
+      strokeColor: '#2E10FF'
     });
     
     lineCoordinatesPath.setMap(map);
-
   };
 
   function getLocation() {
@@ -197,9 +200,9 @@
 
   function storePosition(position) {
     if (position && position.coords) {
-      lat = position.coords.latitude;
-      lng = position.coords.longitude; 
-      pubnub.publish({channel:pnChannel, message:{ lat:lat, lng:lng }});
+      window.lat = position.coords.latitude;
+      window.lng = position.coords.longitude; 
+      pubnub.publish({channel:pnChannel, message:{ lat:window.lat, lng:window.lng }});
     } else {
       console.log("Location unavailable");
     }
@@ -207,10 +210,11 @@
       
   setInterval(function(){
     storePosition(getLocation());
-  }, 5000);
+  }, 10000);
 
 
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['API_HOST_INIT_MAP_KEY'] %>&callback=initMap"></script>
   </body>
 </html>
+    
