removed full screen capability from map

--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -80,7 +80,7 @@
       center: { lat: 39.8, lng: -98.7129 },
       zoom: 5,
       maptypeId: 'roadmap',
-      fullscreenControl: true,
+      fullscreenControl: false,
       zoomControl: true,
       mapTypeControl: false,
       streetViewControl: false,
