--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -47,6 +47,11 @@
           border-radius: 8px;
 }
 
+#floating-panel {
+  top: 10px;  /* adjust value accordingly */
+  left: 10px;
+}
+
 #travel_mode, #transit_mode {
   height: 45px;
   font-size: 24px;
