--- a/app/views/routes/location2.html.erb
+++ b/app/views/routes/location2.html.erb
@@ -98,7 +98,7 @@
       center: { lat: 39.8, lng: -98.7129 },
       zoom: 5,
       maptypeId: 'roadmap',
-      fullscreenControl: true,
+      fullscreenControl: false,
       zoomControl: true,
       mapTypeControl: false,
       streetViewControl: false,
