--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,15 +25,6 @@
   </head>
 
   <body>
-  <% flash.each do |name, message| %>
-    <div id="alert" class="alert alert-<%= name %> alert-dismissible" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <strong><%= name.upcase %></strong> <%= message %>
-    </div>
-  <% end %>
-  <% if current_user %>
-    <div id="currentRoute" style="visibility: hidden"><%= current_user.current_route.id %></div>
-  <% end %>
 
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
@@ -89,7 +80,11 @@
       </div>
     </nav>
     <% if current_user && current_page?('/') || current_page?('/location') || current_page?('/location2') %>
+
       <div id="map"></div>
+      <% if current_user %>
+        <div id="currentRoute" style="visibility: visible;"><%= current_user.current_route.id %></div>
+      <% end %>
       <div id="directions_panel" style="display: none;">
       
       </div>
