--- a/app/views/markers/new.html.erb
+++ b/app/views/markers/new.html.erb
@@ -23,7 +23,7 @@
   </div>
   <br>
   <button id="submitBtn" class="btn btn-primary">Submit</button>
-  <!-- <button id="geolocate" class="btn btn-info">Locate Me</button> -->
+  
 </div>
 <div id="m"></div>
 
@@ -56,53 +56,10 @@
       });
     };
 
-    locateMarker().then(function(){
-      window.location.replace("/")
-    });
+    locateMarker();
+    window.location('/');
+    
   });
-
-  $("#geolocate").click(function(){
-      var nickname = "Work";
-      var address_line1;
-      var address_line2;
-      var marker_role = 1;
-      var lat;
-      var lng;
-      var address;
-      var latlng;
-
-      function findCurrentPosition() {
-        
-        var geocoder = new google.maps.Geocoder;
-
-        navigator.geolocation.getCurrentPosition(function(position) {
-          
-          lat = position.coords.latitude;
-          lng = position.coords.longitude;
-          
-          latlng = {lat: lat, lng: lng};
-
-          geocoder.geocode({'location': latlng}, function(results, status) {
-            address = results[1].formatted_address;
-            formatted_address = address.split(", ");
-            
-            address_line1 = formatted_address[0];
-            
-            address_line2 = formatted_address[1] + ", " + formatted_address[2];
-            
-
-            $.post("/api/v1/markers.json", { nickname: nickname, latitude: lat, longitude: lng, address_line1: address_line1, address_line2: address_line2, marker_role: marker_role }, function(marker){
-              console.log(marker.message);
-              
-            });
-
-          });
-
-        });
-        
-      };
-      findCurrentPosition();
-    });
 
 </script>
 <script async defer
