--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,9 +82,7 @@
     <% if current_user && current_page?('/') || current_page?('/location') || current_page?('/location2') %>
 
       <div id="map"></div>
-      <% if current_user %>
-        <div id="currentRoute" style="visibility: visible;"><%= current_user.current_route.id %></div>
-      <% end %>
+      <div id="currentRoute" style="visibility: hidden;"><%= current_user.current_route.id %></div>
       <div id="directions_panel" style="display: none;">
       
       </div>
