resized some textboxes with css to fix it

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -28,6 +28,10 @@
   text-indent: 30px;
 }
 
+#nickname, #address_line1, #address_line2 {
+  width: 150px;
+}
+
 #address_info2 {
   font-size: 11px;
   text-align: center;
