still tinkering with create destination page

--- a/app/views/markers/new.html.erb
+++ b/app/views/markers/new.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div id="breaks"></div>
     <div>
-      <label>City/State/Zip:</label> <input type="text" placeholder="City, State, Zip, etc.">
+      <label>City/State:</label> <input type="text" placeholder="City, State, Zip, etc.">
     </div>
     
   </div>
