fixed some issues

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -12,6 +12,10 @@
   text-align: center;
 }
 
+#alert {
+  float: top;
+};
+
 .well {
   text-align: center;
 
@@ -19,6 +23,20 @@
 
 #loginBtn {
   text-indent: -150px;
+}
+
+#address_info1 {
+  font-size: 11px;
+  text-align: center;
+  width: auto;
+  text-indent: 30px;
+}
+
+#address_info2 {
+  font-size: 11px;
+  text-align: center;
+  width: auto;
+  text-indent: 50px;
 }
 
 #start, #reverse, #end {
