removed zoom button from map

--- a/app/views/routes/location2.html.erb
+++ b/app/views/routes/location2.html.erb
@@ -99,7 +99,7 @@
       zoom: 5,
       maptypeId: 'roadmap',
       fullscreenControl: false,
-      zoomControl: true,
+      zoomControl: false,
       mapTypeControl: false,
       streetViewControl: false,
       scrollwheel: false,
