--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -72,7 +72,7 @@
       zoom: 5,
       maptypeId: 'roadmap',
       fullscreenControl: false,
-      zoomControl: true,
+      zoomControl: false,
       mapTypeControl: false,
       streetViewControl: false,
       scrollwheel: false,
